public/styles/index.css
section {
  background-color: rgb(240,240,240);
}

article {
  background-color: rgb(240,240,240);
  padding: 30px;
  width: auto;
}

section::after {
  content: "";
  display: table;
  clear: both;
}

.banner {
  width: 100%;
}

#headerbluecolor {
  color:rgb(60, 180, 250);
}
#headerblackcolor {
  color: black;
}

.styleimg {
  border: 2px solid rgb(60, 180, 250);
  border-radius: 10px;
}

.reasonscontainer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.reasonsbox {
  display: block;
  padding: 1px;
  margin: 10px;
  flex: 45%;
  min-width: 200px;
  max-width: calc(45% - 20px);
  text-align: center;
}

.reasonsbox img {
  height: 100px;
  margin: 10px;
}
.reasonsbox h2 {
  margin: 10px;
  margin-left: auto;
  margin-right: auto;
  width: fit-content;
  font-size: 20px;
}
.reasonsbox p {
  margin: 10px;
  margin-left: auto;
  margin-right: auto;
  width: fit-content;
  font-size: 15px;
}

@media (max-width: 750px) {
  .reasonscontainer {
    width: 95%;
  }
}

@media (max-width: 550px) {
  .reasonscontainer {
    flex-direction: column;
  }

  .reasonsbox {
    flex: 100%;
    max-width: 350px;
  }
}

